Added a few Dto's (este neimplementovane) Pridane funkcionality do WarfareOperations setup na unit testing porobene static minimetodky na prepocitanie stats troopov podla levelu (v assembleri vyuzijem)